feat: 기본 설정 추가
공통 클래스 추가
 - BaseResponse, BaseTimeEntity, CustomMessageSource
설정 클래스 추가
 - cors, jpa, security, messageSource
설정 파일 포맷 변경
 - properties to yaml

--- a/.gitignore
+++ b/.gitignore
@@ -33,4 +33,4 @@ build/
 .vscode/
 
 ### exclude application-xxx.yml ###
-**/src/main/resources/application-*.yml
+**/src/main/resources/application-*.yaml
