--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -17,7 +17,7 @@ spring:
       ddl-auto: update
     properties:
       hibernate:
-        show-sql: true
+        "[show_sql]": true
 
 logging:
   file:
