refactor: ObjectMapper 인스턴스 생성 코드 제거
ObjectMapper 사용시 인스턴스를 생성하기보다는
빈으로 주입 받아 사용하는 것을 권장하기 때문에
역직렬화 옵션을 전역화 하고 빈으로 주입 받아
사용하도록 코드를 변경한다.

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -6,7 +6,6 @@ spring:
     include:
       - jwt
       - oauth
-
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/db
@@ -18,6 +17,10 @@ spring:
     properties:
       hibernate:
         "[show_sql]": true
+        
+  jackson:
+    deserialization:
+      fail-on-unknown-properties: false
 
 logging:
   file:
